--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 개발자 주소:제주대학교 공대4호관 4층<br>
 </p>
 <p>
-<a href="http://m.site.naver.com/0pUeE"><img src="https://qrcodethumb-phinf.pstatic.net/20181025_16/kimmjae2312_1540466639115KWU0B_PNG/0pUeE.png"/></a></a><br>QR코드</font>
+<a href="
+http://m.site.naver.com/0q3ab"><img src="https://qrcodethumb-phinf.pstatic.net/20181025_16/kimmjae2312_1540466639115KWU0B_PNG/0pUeE.png"/></a></a><br>QR코드</font>
 </p>
 
 </body>
