--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </p>
 <p>
 <a href="
-http://m.site.naver.com/0q3ab"><img src="https://qrcodethumb-phinf.pstatic.net/20181025_16/kimmjae2312_1540466639115KWU0B_PNG/0pUeE.png"/></a></a><br>QR코드</font>
+https://drive.google.com/open?id=1de4qNv00CoH3RWK0eKw4wjoDdymvSjSx"><img src="https://qrcodethumb-phinf.pstatic.net/20181025_16/kimmjae2312_1540466639115KWU0B_PNG/0pUeE.png"/></a></a><br>QR코드</font>
 </p>
 
 </body>
