--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 개발자 주소:제주대학교 공대4호관 4층<br>
 </p>
 <p>
-<a href='http://m.site.naver.com/0q3an'><img src='https://qrcodethumb-phinf.pstatic.net/20181104_201/kimmjae2312_1541314833015NYSQ7_PNG/0q3an.png'/>"</a><br>QR코드</font>
+<a href='http://m.site.naver.com/0q3an'><img src='https://qrcodethumb-phinf.pstatic.net/20181104_201/kimmjae2312_1541314833015NYSQ7_PNG/0q3an.png'/></a><br>QR코드</font>
 </p>
 
 </body>
